# nlweb-openapi-demo

./: .replit  pyproject.toml  replit.md
attached_assets/: Pasted-I-need-help-with-analyzing-the-following-task-requirement-and-develop-me-plans-how-to-build-the-ai-1758823226853_1758823226853.txt
client/src/: App.tsx  index.css
client/src/components/: api-testing-panel.tsx  configuration-panel.tsx  query-interface.tsx  schema-data-panel.tsx  system-logs-panel.tsx
client/src/lib/: api.ts
client/src/pages/: demo-agent.tsx
server/: app.py  config.py  nlweb_service.py  openai_service.py  requirements.txt  schema_parser.py  vector_store.py
shared/: schema.ts
