[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.2",
    "flask-cors==4.0.0",
    "flask==3.0.0",
    "numpy==1.24.3",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "scikit-learn==1.3.0",
    "openai==1.52.0",
    "pydantic==2.5.0",
]
